Fixed button spacing

--- a/klpsst_wb/src/Frontend/klpsst.css
+++ b/klpsst_wb/src/Frontend/klpsst.css
@@ -88,7 +88,7 @@
 }
 
 #homepage button:hover {
-  background-color: #544caf;
+  background-color: #b0aec5;
 }
 
 #homepage p {
